Various layout bug fixes

--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
 
 .navbar {
  min-height: 60px;
+ margin-left: 3.25%;
 }
 
 
@@ -21,7 +22,6 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
   transition: 0.5s;
   overflow-x: hidden;
   padding-top: 25px;
@@ -36,16 +36,12 @@
 .modal-lg {
     max-width: 80%;
     max-height: 80%;
-
 }
 
 .settings-container {
   border: 1px solid white;
 }
 
-.modal-dialog {
-/* = 90% of the .modal-backdrop block = %90 of the screen */
-}
 .modal-content {
   height: 100%; /* = 100% of the .modal-dialog block */
 }
@@ -59,7 +55,7 @@ media screen and (min-width: 768px) {
   }
 }
 
-@media (max-width:1000px){
+@media (max-width:1000px) {
         .row-home-graphs {
             flex-direction: column;
         }
@@ -87,14 +83,13 @@ media screen and (min-width: 768px) {
    transition: opacity .50s ease-in-out;
    -moz-transition: opacity .50s ease-in-out;
    -webkit-transition: opacity .50s ease-in-out;
-   }
+}
 
 .grid-container {
   max-width: 100%;
   max-height: 100%;
   flex-direction: row;
   flex-wrap: nowrap;
-
 }
 
 .vd {
@@ -178,8 +173,7 @@ main .sidebar {
     justify-content: space-around;
 }
 
-.material-icons,
-.icon-text {
+.material-icons, .icon-text {
   vertical-align: middle;
 }
 
@@ -200,27 +194,26 @@ main .sidebar {
 
 .body-text {
 	overflow-y: auto;
-  max-height: 33px;
+  height: auto;
+  max-height: 77vh;
   /* Firefox */
-    scrollbar-width: thin; 
-  scrollbar-color: grey; 
+    scrollbar-width: thin;
+  scrollbar-color: grey;
 }
 
-.body-text, body::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+.body-text::-webkit-scrollbar-track, body::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(20,20,20,0.6);
 	border-radius: 10px;
-	background-color: #F5F5F5;
 }
 
-.body-text, body::-webkit-scrollbar {
+.body-text::-webkit-scrollbar, body::-webkit-scrollbar {
 	width: 12px;
-	background-color: #F5F5F5;
 }
 
-.body-text, body::-webkit-scrollbar-thumb {
+.body-text::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #555;
+	-webkit-box-shadow: inset 0 0 6px rgba(20,20,20,0.6);
+	background-color: dimgrey;
 }
 
 #settings-con, #theme-settings, #adv-settings, #about {
@@ -303,14 +296,11 @@ main .sidebar {
     }
 }
 
-.splash-container {
-}
-
 .splashscreen-img {
   width: 256px;
   height: 256px
   left: 50%;
-  vertical-align: middle
+  vertical-align: middle;
 }
 .default_gradient {
   background-image: linear-gradient(45deg,#000428, #004e92);
@@ -353,13 +343,12 @@ background-size: 200% 200%;
   padding-left: 4px;
 }
 
-/* used to be called main-bg */
 .dark_panels {
   background-color: rgba(10,10,10,0.5);
 }
 
-.light-panels {
-	background-color: #FFF;
+.light_panels {
+	background-color: rgba(211,211,211,0.2);
 }
 
 
@@ -376,12 +365,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-
   font-family: 'Quicksand', sans-serif;
-        width: 100%;
-        height: 100%;
-}
-
-.dark_theme {
-
+  width: 100%;
+  height: 100%;
 }
